# untitled-mmo

./: .gitignore  LICENSE  Makefile  README.md  build.sh
src/: CMakeLists.txt  MMOConfig.h.in
src/client/: CMakeLists.txt  Game.cpp  Game.h  game.cpp
src/client/camera/: Config.h  TopCamera.cpp  TopCamera.h
src/client/characters/: CMakeLists.txt  player-controls.cpp
src/client/characters/include/: player-controls.hpp
src/client/characters/player/: ClientPlayer.cpp  ClientPlayer.h  PlayerControls.cpp  PlayerControls.h
src/client/inputhandler/: CMakeLists.txt  InputHandler.cpp  InputHandler.h  input-handler.cpp
src/client/resources/models/: Lance.blend  Lance.blend1  Lance.glb
src/client/ui/: CMakeLists.txt  gui.txt
src/client/ui/camera/: CMakeLists.txt  TopCamera.cpp  TopCamera.h  top-camera.cpp
src/client/ui/camera/include/: top-camera.hpp
src/client/ui/controls/: Controls.cpp  Controls.h
src/common/: CMakeLists.txt
src/common/characters/: CMakeLists.txt  Character.cpp  Character.h  character-utils.cpp  character.cpp  player.cpp
src/common/characters/include/: character-utils.hpp  character.hpp  player.hpp
src/common/characters/player/: Player.cpp  Player.h
